...
        <View className="gap-y-3 w-full items-center">
            <AnimatedButton
                className="bg-primary h-14 rounded-2xl flex-row items-center justify-center gap-x-2.5 shadow-lg shadow-primary w-full"
                onPress={() => router.push('/(tabs)/collections')}
            >
                <LayoutDashboard size={25} color="#ffffff" />
                <Text className="text-white font-bold text-[15px]">Go to My Collection</Text>
            </AnimatedButton>

            <AnimatedButton
                className="w-full border border-neutral-800 h-14 rounded-2xl flex-row items-center justify-center gap-x-2.5 bg-neutral-900/40"
                onPress={() => router.push('/(auth)/register')}
            >
...
